force-app/main/default/objects/Device__c/fields/Non_Inv_Gen_Ramp_Rate__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Gen_Ramp_Rate__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Non-Inv Generator Ramp Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Not Enabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>