force-app/main/default/objects/Device__c/fields/Non_Inv_Inter_Trip_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Inter_Trip_Scheme__c</fullName>
    <description>DER Register Level 2 – AC Connection
Description of the form of inter-trip (e.g. “from local substation”).</description>
    <label>Non-Inv Inter-Trip Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>