force-app/main/default/objects/Device__c/fields/Non_Inv_Neutral_Voltage_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Neutral_Voltage_Displacement__c</fullName>
    <description>DER Register Level 2 – AC Connection
Trip voltage (V)</description>
    <label>Non-Inv Neutral Voltage Displacement</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>