force-app/main/default/objects/Device__c/fields/Non_Inv_Rate_of_Change_of_Freq__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Rate_of_Change_of_Freq__c</fullName>
    <description>&quot;DER Register Level 2 – AC Connection
Rate of change of frequency trip point (Hz/s).
Permitted range is between 0 and 4 (inclusive)&quot;</description>
    <label>Non-Inv Rate of Change of Freq (RoCoF)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>