force-app/main/default/objects/Device__c/fields/Non_Inv_Reactive_Power_Reg__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Reactive_Power_Reg__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Non-Inv Reactive Power Regulation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Voltage droop</fullName>
            </value>
            <value>
                <fullName>Fixed power factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>