force-app/main/default/objects/Device__c/fields/Non_Inv_Volt_Set_Point_Unit__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Volt_Set_Point_Unit__c</fullName>
    <description>DER Register Level 2 – AC Connection</description>
    <label>Non-Inv Volt Set Point Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>