force-app/main/default/objects/Device__c/fields/Non_Inv_Voltage_Vector_Shift__c.field-meta.xml
<CustomField>
    <fullName>Non_Inv_Voltage_Vector_Shift__c</fullName>
    <description>DER Register Level 2 – AC Connection
Trip angle (Deg.)</description>
    <label>Non-Inv Voltage Vector Shift</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>