force-app/main/default/objects/Device__c/fields/Parent_Device__c.field-meta.xml
<CustomField>
    <fullName>Parent_Device__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Device</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>Lookup</type>
</CustomField>