force-app/main/default/objects/Device__c/fields/Rated_Reactive_Max_Power_Output__c.field-meta.xml
<CustomField>
    <fullName>Rated_Reactive_Max_Power_Output__c</fullName>
    <label>Rated Reactive - Max Power Output (kVAR)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>