force-app/main/default/objects/Device__c/fields/Requested__c.field-meta.xml
<CustomField>
    <fullName>Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track Device history</description>
    <inlineHelpText>This field denotes if this device was Requested on the original online application</inlineHelpText>
    <label>Requested</label>
    <type>Checkbox</type>
</CustomField>