force-app/main/default/objects/Device__c/fields/Serial_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Serial_Numbers__c</fullName>
    <description>DER Register Level 2 – AC Connection
The number of AC Connections “count” shall determine how many “serialNumbers”required. For example, if “count” = 3, then the system shall require 3 serial numbers&quot;</description>
    <label>Serial Number(s)</label>
    <type>TextArea</type>
</CustomField>