force-app/main/default/objects/Device__c/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <label>Sitecore ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>