force-app/main/default/objects/Device__c/fields/Sub_Transient_impedance__c.field-meta.xml
<CustomField>
    <fullName>Sub_Transient_impedance__c</fullName>
    <label>Sub-Transient impedance (X&quot;)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>