force-app/main/default/objects/Device__c/recordTypes/Device_L2.recordType-meta.xml
<RecordType>
    <fullName>Device_L2</fullName>
    <active>true</active>
    <label>AC Equipment - L2</label>
</RecordType>