force-app/main/default/objects/Device__c/recordTypes/Device_L3.recordType-meta.xml
<RecordType>
    <fullName>Device_L3</fullName>
    <active>true</active>
    <label>DER Device - L3</label>
</RecordType>