force-app/main/default/objects/Device__c/validationRules/Equipment_Power_Factor.validationRule-meta.xml
<ValidationRule>
    <fullName>Equipment_Power_Factor</fullName>
    <active>false</active>
    <description>Equipment Power Factor (PF) cannot be greater than 1</description>
    <errorConditionFormula>Equip_Power_Factor__c &gt; 1</errorConditionFormula>
    <errorDisplayField>Equip_Power_Factor__c</errorDisplayField>
    <errorMessage>Equipment Power Factor (PF) cannot be greater than 1. Please update the value entered.</errorMessage>
</ValidationRule>