force-app/main/default/objects/Device__c/validationRules/L2_AC_DC_Coupled.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_AC_DC_Coupled</fullName>
    <active>true</active>
    <description>AC Equipment Sub Type is required for Devices with Record Type &apos;AC Equipment - L2&apos; AND AC Equipment Sub-Type = &quot;Battery&quot;</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;AC Equipment - L2&quot;,
ISPICKVAL(AC_Equip_Sub_Type__c, &quot;Battery&quot;),
ISBLANK(TEXT( AC_DC_Coupling__c )),
NOT(Legacy_Data__c)
)</errorConditionFormula>
    <errorDisplayField>AC_DC_Coupling__c</errorDisplayField>
    <errorMessage>AC or DC Coupled is blank. This is required when AC Equipment Sub Type = Battery. Please enter a value.</errorMessage>
</ValidationRule>