force-app/main/default/objects/Device__c/validationRules/L2_AC_Equipment_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_AC_Equipment_Type</fullName>
    <active>true</active>
    <description>AC Equipment Type is required for Devices with Record Type &apos;AC Equipment - L2&apos;</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;AC Equipment - L2&quot;,
ISBLANK(TEXT(AC_Equip_Type__c)),
NOT(Legacy_Data__c)
)</errorConditionFormula>
    <errorDisplayField>AC_Equip_Type__c</errorDisplayField>
    <errorMessage>AC Equipment Type is blank. Please select the AC Equipment Type.</errorMessage>
</ValidationRule>