force-app/main/default/objects/Device__c/validationRules/L2_Inv_Power_Rate_Limit_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_Inv_Power_Rate_Limit_Mode</fullName>
    <active>true</active>
    <description>Inv Power Rate Limit Mode can only be populated when AC Equipment Type = &quot;Inverter&quot;</description>
    <errorConditionFormula>AND(
    RecordType.Name = &quot;AC Equipment - L2&quot;,
    NOT(ISPICKVAL( AC_Equip_Type__c , &quot;Inverter&quot;)),
    NOT(ISBLANK(TEXT(Inv_Power_Rate_Limit_Mode__c))),
    NOT(Legacy_Data__c)
)</errorConditionFormula>
    <errorDisplayField>Inv_Power_Rate_Limit_Mode__c</errorDisplayField>
    <errorMessage>Inv Power Rate Limit Mode can only be populated when AC Equipment Type = &quot;Inverter&quot;</errorMessage>
</ValidationRule>