force-app/main/default/objects/Device__c/validationRules/L2_Inv_Power_Rate_Limit_Mode_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_Inv_Power_Rate_Limit_Mode_Fields</fullName>
    <active>true</active>
    <description>Inv Power Ramp Rate (Wgra) can only be populated when Inv Power Rate Limit Mode = &quot;Enabled&quot;</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;AC Equipment - L2&quot;,

NOT(ISPICKVAL(Inv_Power_Rate_Limit_Mode__c , &quot;Enabled&quot;)),

NOT(ISBLANK(Inv_Power_Ramp_Rate__c)),

NOT(Legacy_Data__c)

)</errorConditionFormula>
    <errorDisplayField>Inv_Power_Ramp_Rate__c</errorDisplayField>
    <errorMessage>Inv Power Ramp Rate (Wgra) can only be populated when Inv Power Rate Limit Mode = &quot;Enabled&quot;</errorMessage>
</ValidationRule>