force-app/main/default/objects/Device__c/validationRules/L2_Inv_Power_Response_Mode_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_Inv_Power_Response_Mode_Fields</fullName>
    <active>true</active>
    <description>The following fields can only be populated when Inv Power Response Mode = &quot;Enabled&quot;:
Inv Reference Point P1, P2; Inv Power Factor at P1, P2; Inv Power Factor Quadrant at P1, P2.</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;AC Equipment - L2&quot;,

NOT(ISPICKVAL(Inv_Power_Response_Mode__c , &quot;Enabled&quot;)),

OR(
NOT(ISBLANK(Inv_Ref_Point_P1__c)),
NOT(ISBLANK(Inv_Ref_Point_P2__c)),
NOT(ISBLANK(Inv_Power_Factor_P1__c)),
NOT(ISBLANK(Inv_Power_Factor_P2__c)),
NOT(ISBLANK(TEXT(Inv_Power_Factor_Quad_P1__c))),
NOT(ISBLANK(TEXT(Inv_Power_Factor_Quad_P2__c)))
),
NOT(Legacy_Data__c)
)</errorConditionFormula>
    <errorDisplayField>Inv_Power_Response_Mode__c</errorDisplayField>
    <errorMessage>The following fields can only be populated when Inv Power Response Mode = &quot;Enabled&quot;:
Inv Reference Point P1, P2; Inv Power Factor at P1, P2; Inv Power Factor Quadrant at P1, P2.</errorMessage>
</ValidationRule>