force-app/main/default/objects/Device__c/validationRules/L2_Inv_Volt_Watt_Resp_Mode.validationRule-meta.xml
<ValidationRule>
    <fullName>L2_Inv_Volt_Watt_Resp_Mode</fullName>
    <active>true</active>
    <description>Inv Volt Watt Response Mode can only be populated when AC Equipment Type = &quot;Inverter&quot;</description>
    <errorConditionFormula>AND(
RecordType.Name = &quot;AC Equipment - L2&quot;,

NOT(ISPICKVAL( AC_Equip_Type__c , &quot;Inverter&quot;)),

NOT(ISBLANK(TEXT(Inv_Volt_Watt_Response_Mode__c))),
NOT(Legacy_Data__c)

)</errorConditionFormula>
    <errorDisplayField>Inv_Volt_Watt_Response_Mode__c</errorDisplayField>
    <errorMessage>Inv Volt Watt Response Mode can only be populated when AC Equipment Type = &quot;Inverter&quot;</errorMessage>
</ValidationRule>