force-app/main/default/objects/Device__c/validationRules/Non_Inverter_L3_Device.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Inverter_L3_Device</fullName>
    <active>true</active>
    <errorConditionFormula>AND( EAI_Type__c == &apos;Device_L3&apos;,
 ISPICKVAL( Parent_Device__r.AC_Equip_Type__c , &apos;Non-Inverter&apos;),
 NOT( ISPICKVAL( Device_Sub_Type__c , &apos;Other&apos;) )
)</errorConditionFormula>
    <errorMessage>For Non-Inverter AC Equipment, L3 Devices must set the Device Sub-Type to Other.</errorMessage>
</ValidationRule>